service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adarsh
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: demo

  ports:
    - name: http       
      port: 80
      targetPort: 80
      protocol: TCP

    - name: http1
      port: 8080
      targetPort: 8080
      protocol: TCP
