Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amazon-ing
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: amazon.example.com
      http:
        paths:
          - path: /demo1/api/v1/projects
            pathType: Prefix
            backend:
              service:
                name: adarsh
                port:
                  name: http

          - path: /
            pathType: Prefix
            backend:
              service:
                name: adarsh
                port:
                  name: http1
